Create API endpoints
- Create use auth APIs
- Create store APIs
- Create Order APIs

--- a/package.json
+++ b/package.json
@@ -11,35 +11,83 @@
     "build": "rimraf build/; babel src --extensions .js,.ts --out-dir build",
     "start": "node build/index.js",
     "start:dev": "nodemon",
-    "dev": "yarn start:dev"
+    "dev": "yarn start:dev",
+    "prepare": "husky install",
+    "test": "jest --coverage --config=jest.config.js --passWithNoTests --detectOpenHandles --testTimeout=30000 --forceExit",
+    "lint": "eslint . --ext .js,.ts",
+    "lint:fix": "yarn lint --fix"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "yarn build && lint-staged",
+      "pre-push": "git diff HEAD --quiet"
+    }
+  },
+  "lint-staged": {
+    "src/**/*.{js,ts,d.ts,json}": [
+      "eslint --fix",
+      "prettier --write"
+    ]
   },
   "devDependencies": {
     "@babel/cli": "^7.12.13",
     "@babel/core": "^7.12.13",
     "@babel/node": "^7.12.13",
     "@babel/preset-env": "^7.12.13",
-    "@babel/preset-typescript": "^7.12.13",
+    "@babel/preset-typescript": "^7.16.7",
+    "@types/bcrypt": "^5.0.0",
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/faker": "^6.6.9",
+    "@types/jest": "^27.4.1",
+    "@types/mongodb-memory-server": "^2.3.0",
+    "@types/mongoose": "^5.11.97",
+    "@types/node": "^17.0.21",
+    "@types/rimraf": "^3.0.2",
+    "@typescript-eslint/eslint-plugin": "^4.14.2",
+    "@typescript-eslint/parser": "^4.14.2",
     "babel-plugin-module-resolver": "^4.1.0",
+    "eslint": "^7.19.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-config-prettier": "^7.2.0",
+    "eslint-import-resolver-babel-module": "^5.2.0",
+    "eslint-import-resolver-jest": "^3.0.0",
+    "eslint-import-resolver-typescript": "^2.4.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-json": "^2.1.2",
+    "eslint-plugin-prettier": "^3.3.1",
+    "faker": "^6.6.6",
+    "husky": "^7.0.4",
     "jest": "^27.5.1",
+    "jsdoc": "^3.6.10",
+    "lint-staged": "^12.3.4",
+    "mongodb-memory-server": "^8.4.0",
     "nodemon": "^2.0.15",
+    "prettier": "^2.5.1",
     "rimraf": "^3.0.2",
     "supertest": "^6.2.2",
     "ts-jest": "^27.1.3",
+    "ts-node": "^10.6.0",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.6.2"
   },
   "dependencies": {
-    "@types/cors": "^2.8.12",
-    "@types/mongoose": "^5.11.97",
-    "@types/node": "^17.0.21",
-    "@types/rimraf": "^3.0.2",
+    "@types/compression": "^1.7.2",
+    "@types/http-errors": "^1.8.2",
+    "@types/jsonwebtoken": "^8.5.8",
+    "@types/morgan": "^1.9.3",
+    "@types/supertest": "^2.0.11",
+    "bcrypt": "^5.0.1",
     "celebrate": "^15.0.1",
+    "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
+    "helmet": "^5.0.2",
+    "http-errors": "^2.0.0",
     "joi": "^17.6.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.4",
-    "ts-node": "^10.6.0"
+    "morgan": "^1.10.0"
   }
 }
